fixed content width on mobile

--- a/src/Main.css
+++ b/src/Main.css
@@ -68,7 +68,6 @@ a:focus {
     background: #17a2b8;
     color: #F3EFE0;
     transition: all 0.3s;
-    overflow-y: scroll;
     border-radius: 4px;
 }
 
